# ipcv-assignments

./: .gitignore  LICENSE  README.md  assignment1.ipynb  assignment2.ipynb  assignment2_mlflow.ipynb  assignment2_mlflow_modular.ipynb  assignment_1.ipynb  pyproject.toml  ruff.toml  stripout.sh
.github/workflows/: static-analysis.yaml
dataset/annotations/: test.txt  train.txt  val.txt
scripts/: run-task2.sbatch  run-task2_mlflow.sbatch
