[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[project]
name = "ipcv-project"
version = "0.1.0"
description = "Image Processing and Computer Vision assignments."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "nbstripout>=0.8.2",
    "ruff>=0.14.10",
    "zizmor>=1.20.0",
]
assignment1 = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
]
assignment2 = [
    "graphviz>=0.21",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]
